--- a/src/tabs.css
+++ b/src/tabs.css
@@ -1,6 +1,41 @@
 
-.react-origami-tabs {}
+.react-origami-tabs {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
 
-.react-origami-tabs .tab {}
+.react-origami-tabs .tab {
+    font-size: 16px;
+    width: 200px;
+    text-align: center;
+    line-height: 2em;
+    background-color: hsl(240,90%,90%);
+    color: white;
+    position: relative;
+    margin-right: 32px;
+    cursor: pointer;
+}
+
+.react-origami-tabs .tab:hover {
+    background-color: hsl(240,90%,95%);
+}
+
+.react-origami-tabs .tab:hover:after {
+    border-bottom-color: hsl(240,90%,95%);
+}
+
+.react-origami-tabs .tab:after {
+  content: '';
+  position: absolute;
+  left: 100%;
+  top: 0;
+  border-top: 0 solid transparent;
+  border-right: 32px solid transparent;
+  border-bottom: 32px solid hsl(240, 90%, 90%);
+  border-left: 0px solid transparent;
+  height: 0px;
+  display: inline-block;
+}
 
 .react-origami-tabs .tab.is-selected {}
